# Rust-CLI.sol

./: Cargo.toml  README.md
src/: dns_lookup.rs  main.rs  old_main.rs  solana_utils.rs
tests/: cli_integration_test.rs  dns_lookup_test.rs
