[package]
name = "Rust_CLI_sol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
solana-client = "1.16"
solana-sdk = "1.16"
solana-account-decoder = "1.16"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dns-lookup = "1.0"
anyhow = "1.0"
bumpalo = "=3.11.1"
spl-token = "3.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"