[package]
name = "rust_cli_sol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
solana-client = "1.16"
solana-sdk = "1.16"
solana-account-decoder = "1.16"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dns-lookup = "1.0"
anyhow = "1.0"
bumpalo = "=3.11.1"
spl-token = "3.5"
url = "2.2"
dotenv = "0.15"
mpl-token-metadata = "4.1.2"
borsh = "0.10.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
mockito = "1.0"

[[bin]]
name = "rust_cli_sol"
path = "src/main.rs"

